--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
@@ -30,6 +31,7 @@
     "express-session": "^1.17.0",
     "jquery": "^3.4.1",
     "mongoose": "^5.9.5",
+    "mongoose-unique-validator": "^2.0.3",
     "path": "^0.12.7"
   },
   "devDependencies": {
